--- a/Server/package.json
+++ b/Server/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "memoriesproject",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "\u0016https://github.com/kaisman75/memoriesProject.git"
   },
   "author": "kais manai",
   "license": "ISC"
