--- a/Server/package.json
+++ b/Server/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type": "module",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "author": "kais manai",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.2",
     "nodemon": "^2.0.15"
