--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-spinkit": "^3.0.0",
     "redux": "^4.1.2",
